maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:2: error: Missing closing brace `}' assumed here
def trouveDonut() : (Int, Int) = {
^ShortestPathMaze:2: error: expected class or object definition
def trouveDonut() : (Int, Int) = {
^ShortestPathMaze:15: error: expected class or object definition
def Cartographie(i:Int, j:Int, done: Int) {
^ShortestPathMaze:32: error: expected start of definition
override def run() {
         ^